--- a/DBMS/DBMS.csproj
+++ b/DBMS/DBMS.csproj
@@ -40,6 +40,7 @@
     <Compile Include="StorageEngine\Utility\DataBase.cs" />
     <Compile Include="StorageEngine\StorageEngine.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="StorageEngine\BufferManager\BufferManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
